--- a/login.html
+++ b/login.html
@@ -12,15 +12,70 @@
 <img id="food1" src="./images/food1.png">
 <img id="food2" src="./images/food2.png" >
 <div id="log">
-  <img id="food3" src=".images/food1.png">
+  <img id="food3" src="./images/food1.png">
   <p id="welcome">LOGIN</p>
-  <form id="login">
-    <input id="mail"    type="email" placeholder="Email" required>
+  <form id="Login_Form">
+    <input id="email"    type="email" placeholder="Email" required>
     <input id="pass" type="password" placeholder="Password" required>
   </form>
-  <button type="submit" form="login">Next</button>
+  <button  id="login" type="submit">LOGIN</button>
   <button>Forgot Password?</button>
+  <p>Already have an account?</p>
+  <button onclick="location.href='Signup.html'">Signup</button>
 </div>
-<script src="app"></script>
 </body>
+
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js";
+  import { getDatabase , set ,ref} from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-analytics.js";
+  import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-auth.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAgC2iKAPRfjX1H-jb3siv7zM8aVb59cm4",
+    authDomain: "gourmet-bd3c7.firebaseapp.com",
+    databaseURL: "https://gourmet-bd3c7-default-rtdb.firebaseio.com",
+    projectId: "gourmet-bd3c7",
+    storageBucket: "gourmet-bd3c7.appspot.com",
+    messagingSenderId: "128496849912",
+    appId: "1:128496849912:web:d335d63afe139cd0c8fc0d",
+    measurementId: "G-CJW3DTRV3F"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const database = getDatabase(app)
+  const analytics = getAnalytics(app);
+  const auth = getAuth();
+
+
+
+  login.addEventListener('click',(e)=>{
+
+  var email = document.getElementById('email').value;
+  var password = document.getElementById('pass').value;
+
+  signInWithEmailAndPassword(auth, email, password)
+  .then((userCredential) => {
+    // Signed in 
+    const user = userCredential.user;
+    alert('Logged in!!')
+    window.location.href="index.html";
+    // ...
+  })
+  .catch((error) => {
+    const errorCode = error.code;
+    const errorMessage = error.message;
+
+    alert(errorMessage)
+  });
+
+
+  })
+</script>
 </html>
